--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "firebase": "^10.14.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.263.1",
     "next": "^15.0.0",
+    "openai": "^6.8.1",
+    "pdfjs-dist": "^5.4.394",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
