Remove PostgreSQL/Prisma and update business dashboard UI - Complete removal of PostgreSQL and Prisma dependencies - Delete Prisma schema, migrations, and related database files - Remove embeddings.ts and legacy usage.ts - Update Firebase usage functions to use object parameters - Replace all hardcoded emojis with lucide-react icons across business dashboard - Convert ResultViewer and related components to dark theme styling - Fix TypeScript build errors and module resolution issues

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "npm run build:packages && next build",
-    "build:packages": "npm run build --workspace=packages/shared && npm run build --workspace=packages/db && npm run build --workspace=packages/ai-core",
+    "build:packages": "npm run build --workspace=packages/shared && npm run build --workspace=packages/db && npm run build --workspace=packages/rag-core && npm run build --workspace=packages/ai-core",
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc -b packages/shared/tsconfig.json packages/db/tsconfig.json packages/ai-core/tsconfig.json",
