feat: Complete Phase 4 website builder + Phase 5 UX improvements (5/10 tasks) Phase 4 - Business Plan Integration & Auto-Fill Features: - Add AI Choose button for company name (extracts from business plan) - Implement auto-fill toggles for all wizard steps with purple-themed UI - Add ai_choose and ai_fill markers in websiteGenerator prompt builder - Update generation time messaging (20-60s -> 1-2 minutes) - Fix business plan context bug (check sections instead of response) - Pass business plan from client to avoid server permission errors Phase 5 - UX Polish & Error Handling (5/10 completed): 1. Improved Loading & Error States: - Add skeleton loaders to websites list (3 animated cards) - Implement comprehensive error state with retry functionality - Add toast notifications for all user actions - Better error messages with actionable guidance 2. Regenerate Functionality: - Create POST /api/websites/[id]/regenerate endpoint - Add regenerate button for failed websites with loading states - Implement auto-polling for status updates (3s intervals) - Reuse existing wizard inputs and business plan data - Apply quota guard middleware to regenerate endpoint 3. Recent Websites Component: - Create RecentWebsites.tsx component showing last 5 websites - Display status badges, timestamps, and generation metadata - Add to business dashboard in 2-column grid layout - Include empty state with "Generate Website" CTA - Show quick access "View" buttons for each website 4. Input Validation: - Add email validation with regex and real-time error display - Implement URL validation for all social media links - Show red border highlights and error icons for invalid inputs - Add AlertCircle icons with helpful error messages - Validation remains non-blocking (fields stay optional) 5. Rate Limiting & Quota Management: - Apply withQuotaGuard middleware to regenerate endpoint - Enhanced frontend quota error detection (429 status) - User-friendly quota exceeded messages with 6s duration - Add vali

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,6 +9,10 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
+    },
+    "./firebase/websites.server": {
+      "types": "./dist/firebase/websites.server.d.ts",
+      "import": "./dist/firebase/websites.server.js"
     }
   },
   "scripts": {
@@ -19,7 +23,8 @@
   },
   "dependencies": {
     "firebase": "^10.14.1",
-    "firebase-admin": "^13.6.0"
+    "firebase-admin": "^13.6.0",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
