--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,27 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id_here
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id_here
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id_here
 
+# Firebase Admin SDK (for server-side API operations)
+# ⚠️ REQUIRED FOR PRODUCTION ⚠️
+# Development: Uses NEXT_PUBLIC_FIREBASE_PROJECT_ID (sufficient for local dev)
+# Production: MUST set FIREBASE_SERVICE_ACCOUNT_KEY for secure server-side operations
+#
+# To get your service account key:
+# 1. Go to Firebase Console > Project Settings > Service Accounts
+# 2. Click "Generate New Private Key"
+# 3. Download the JSON file
+# 4. Stringify the JSON and set it here (one line, no newlines)
+#
+# FIREBASE_SERVICE_ACCOUNT_KEY={"type":"service_account","project_id":"...","private_key":"...","client_email":"..."}
+#
+# See docs/PRODUCTION_SETUP.md for detailed instructions
+
 # OpenAI Configuration
 OPENAI_API_KEY=sk-proj-your-key-here
 OPENAI_ORG_ID=org-your-org-id (optional)
+
+# Anthropic Configuration (for Website Builder)
+ANTHROPIC_API_KEY=sk-ant-your-key-here
 
 # AI Models
 MODEL_MINI=gpt-4o-mini
