fix: Fix usage tracking to prevent stats decrease on deletion - Fixed usage stats to use permanent usage_logs collection instead of deletable results - Added Firestore composite index for usage_logs (tenantId + userId + createdAt) - Fixed Firestore query construction to properly chain constraints and use indexes - Added defensive cost conversion logic to handle both dollars and cents in metadata - Added quota widget fallback to show all-time usage when this month data unavailable - Added explicit orderBy clause to ensure correct index usage for date-filtered queries This ensures usage statistics (tokens, costs, quota) reflect actual API consumption and don't decrease when users delete AI assistant results or websites.

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -13,6 +13,10 @@
     "./firebase/websites.server": {
       "types": "./dist/firebase/websites.server.d.ts",
       "import": "./dist/firebase/websites.server.js"
+    },
+    "./firebase/assistantResults.server": {
+      "types": "./dist/firebase/assistantResults.server.d.ts",
+      "import": "./dist/firebase/assistantResults.server.js"
     }
   },
   "scripts": {
