--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -17,6 +17,10 @@
     "./firebase/assistantResults.server": {
       "types": "./dist/firebase/assistantResults.server.d.ts",
       "import": "./dist/firebase/assistantResults.server.js"
+    },
+    "./firebase/logos.server": {
+      "types": "./dist/firebase/logos.server.d.ts",
+      "import": "./dist/firebase/logos.server.js"
     }
   },
   "scripts": {
