--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "kimuntupro-ai",
   "private": true,
   "version": "0.0.1",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,11 +12,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "firebase": "^10.14.1",
+    "framer-motion": "^12.23.25",
     "lucide-react": "^0.263.1",
     "next": "^14.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
+    "recharts": "^3.5.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
