--- a/packages/ai-core/package.json
+++ b/packages/ai-core/package.json
@@ -43,6 +43,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.0",
     "openai": "^4.67.0",
     "tavily": "^1.0.2",
     "zod": "^3.23.8",
