--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^10.14.1",
     "framer-motion": "^12.23.25",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.263.1",
     "next": "^14.2.0",
     "react": "^18.2.0",
