--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,11 @@
     "extends": "next/core-web-vitals",
     "rules": {
         "react/no-unescaped-entities": "off",
-        "react/jsx-no-undef": "warn",
-        "@next/next/no-img-element": "warn",
-        "react-hooks/exhaustive-deps": "warn"
+        "react/jsx-no-undef": "off",
+        "@next/next/no-img-element": "off",
+        "react-hooks/exhaustive-deps": "off",
+        "jsx-a11y/alt-text": "off",
+        "@typescript-eslint/no-unused-vars": "off",
+        "@typescript-eslint/no-explicit-any": "off"
     }
 }
